--- a/css/style3.css
+++ b/css/style3.css
@@ -21,7 +21,7 @@
     --text-color: #ffffff;
     --main-color: #99c7be;*/
     --bg-color: #fee9e4;
-    --nice-color: #fee9e4;
+    --nice-color: #fcf5f3;
     --second-bg-color: #FFFFFF;
     --text-color: #3D405B;
     --main-color: #d87d62;
