--- a/css/style2.css
+++ b/css/style2.css
@@ -258,11 +258,13 @@ span{
 
 .portfolio-layer h4{
     font-size: 3rem;
+    color: var(--second-bg-color)
 }
 
 .portfolio-layer p {
-    font-size: 1.6rem;
+    font-size: 2.0rem;
     margin: .3rem 0 1rem;
+    color: var(--second-bg-color)
 }
 
 .portfolio-layer a{
@@ -271,7 +273,7 @@ span{
     align-items: center;
     width:  5rem;
     height: 5rem;
-    background: var(--text-color);
+    background: var(--secondbg-color);
     border-radius: 50%;
 }
 
